fix registration contact resolvers